# Paiagram

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  TODO.md  about.toml  flake.nix  index.html  license.html  new_timetable_entry.rs  rust-toolchain.toml  rustfmt.toml  test.rs
.cargo/: config.toml
.github/workflows/: branch-nightly.yml  docs.yml  main.yml  nightly.yml  prune-pages.yml  wasm.yml
assets/: manifest.json  sw.js
assets/locales/: en-CA.ftl  zh-Hans.ftl
assets/locales/en-CA/: en.ftl
crates/epaint_default_fonts/: Cargo.toml
crates/epaint_default_fonts/src/: lib.rs
crates/paiagram/: Cargo.toml  README.md
crates/paiagram-app/: Cargo.toml
crates/paiagram-app/src/: main.rs
crates/paiagram-core/: Cargo.toml
crates/paiagram-core/src/: colors.rs  comm.rs  entry.rs  export.rs  graph.rs  i18n.rs  import.rs  interval.rs  lib.rs  plugin.rs  problems.rs  route.rs  rw.rs  script.rs  settings.rs  station.rs  trip.rs  units.rs  vehicle.rs
crates/paiagram-core/src/export/: graphviz.rs  oudia.rs  typst_diagram.rs
crates/paiagram-core/src/graph/: arrange.rs
crates/paiagram-core/src/import/: gtfs.rs  llt.rs  oudia.rs  qetrc.rs
crates/paiagram-core/src/script/: get_world.rhai
crates/paiagram-core/src/station/: fetch_name.rs
crates/paiagram-core/src/trip/: class.rs  routing.rs
crates/paiagram-core/src/ui/: tabs.rs
crates/paiagram-core/src/ui/tabs/: classes.rs  diagram.rs  inspector.rs  priority_graph.rs  settings.rs  start.rs
crates/paiagram-core/src/ui/tabs/graph/: gpu_draw.rs
crates/paiagram-core/src/units/: coordinates.rs  distance.rs  speed.rs  time.rs
crates/paiagram-oudia/: .gitignore  Cargo.toml  README.md
crates/paiagram-oudia/src/: ast.pest  ast.rs  ir.rs  lib.rs  operation.pest  operation.rs  oudia.pest  root.rs  time.rs  timetable.pest  timetable.rs  write.rs
crates/paiagram-oudia/test/: README.md  sample.oud2  sample2.oud2  scrape_tests  test_after.txt  test_before.txt  test_operations.txt  test_times.txt
crates/paiagram-pdf/: Cargo.toml
crates/paiagram-raptor/: Cargo.toml
crates/paiagram-raptor/src/: lib.rs
crates/paiagram-rw/: Cargo.toml
crates/paiagram-rw/src/: read.rs  save.rs  write.rs
crates/paiagram-soap/: Cargo.toml  LICENSE-MIT.md  README.md
crates/paiagram-soap/src/: lib.rs
crates/paiagram-timing/: Cargo.toml
crates/paiagram-ui/: Cargo.toml  README.md  build.rs
crates/paiagram-ui/assets/locales/: en-CA.ftl  zh-Hans.ftl
crates/paiagram-ui/src/: actions.rs  command_palette.rs  export_typst_diagram.rs  lib.rs  main.rs  save.rs  tabs.rs  widgets.rs
crates/paiagram-ui/src/actions/: change_entry_mode.rs
crates/paiagram-ui/src/tabs/: all_trips.rs  classes.rs  diagram.rs  graph.rs  inspector.rs  priority_graph.rs  route_timetable.rs  settings.rs  start.rs  station.rs  text.rs  trip.rs
crates/paiagram-ui/src/tabs/diagram/: calc_trip_lines.rs  draw.rs  draw_lines.rs  gpu_draw.rs  gpu_trip.wgsl  prep_segments.rs
crates/paiagram-ui/src/tabs/graph/: blit.wgsl  gpu_draw.rs  gpu_graph.wgsl  underlay.rs
crates/paiagram-ui/src/widgets/: buttons.rs  indicators.rs  timetable_popup.rs
crates/paiagram/assets/locales/: zh-Hans.ftl
crates/paiagram/src/: actions.rs  command_palette.rs  export_typst_diagram.rs  lib.rs  main.rs  save.rs  settings.rs  tabs.rs  typst_diagram.typ
crates/paiagram/src/actions/: change_entry_mode.rs
crates/paiagram/src/tabs/: classes.rs  diagram.rs  graph.rs  priority_graph.rs  route_timetable.rs  settings.rs  start.rs  station.rs  trip.rs
crates/paiagram/src/tabs/diagram/: gpu_draw.rs  prep_segments.rs
crates/paiagram/src/tabs/graph/: gpu_draw.rs  underlay.rs
crates/paiagram/src/widgets/: buttons.rs  timetable_popup.rs
docs/: book.typ  building.typ  ebook.typ  icon.typ  index.html  index.typ  intro.typ  links.typ  main.typ  style.css  style.typ  tutorial.typ
docs/chapters/: building.typ  extra_aid.typ  foreign.typ  getting_started.typ  import_export.typ  interface.typ  introduction.typ  mod.typ
docs/export/: oudia.typ  paia.typ  typst-diagram.typ
docs/import/: gtfs.typ  oudia.typ  qetrc.typ
docs/misc/: linux-web.typ  web.typ
docs/model/: network.typ  trips-vehicles.typ
docs/panels/: diagram.typ  index.typ  map.typ  station.typ
docs/templates/: ebook.typ  page.typ
src/: basic.rs  colors.rs  entry.rs  export.rs  graph.rs  i18n.rs  import.rs  interface.rs  intervals.rs  lines.rs  main.rs  problems.rs  route.rs  rw.rs  rw_data.rs  search.rs  settings.rs  station.rs  status_bar_text.rs  trip.rs  troubleshoot.rs  ui.rs  units.rs  vehicle.rs  vehicles.rs
src/export/: graphviz.rs  typst_diagram.rs  typst_priority_graph.typ  typst_timetable.rs
src/graph/: arrange.rs
src/import/: gtfs.rs  oudia.rs  qetrc.rs
src/interface/: about.rs  camera.rs  side_panel.rs  tabs.rs  widgets.rs
src/interface/side_panel/: interval_stats.rs  station_stats.rs
src/interface/tabs/: about.rs  classes.rs  diagram.rs  displayed_lines.rs  graph.rs  inspector.rs  line_timetable.rs  minesweeper.rs  overview.rs  services.rs  settings.rs  start.rs  station_timetable.rs  tree_view.rs  vehicle.rs  vehicle_overview.rs
src/interface/widgets/: buttons.rs  scrollable_time.rs  timetable_popup.rs
src/rw/: read.rs  save.rs  write.rs
src/rw_data/: custom.rs  gtfs.rs  jgrpp.rs  mod.rs  oudiasecond.rs  qetrc.rs  save.rs  saveload.rs  test.rs  write.rs
src/trip/: class.rs  route.rs  routing.rs
src/ui/: about.rs  frame.rs  side_panel.rs  tabs.rs  widgets.rs
src/ui/side_panel/: station_stats.rs  vehicle_stats.rs
src/ui/tabs/: all_trips.rs  classes.rs  diagram.rs  graph.rs  inspector.rs  services.rs  settings.rs  start.rs  station_timetable.rs  tree_view.rs  trip.rs
src/ui/widgets/: timetable_popup.rs
src/units/: canvas.rs  distance.rs  mod.rs  speed.rs  time.rs
src/vehicles/: calculate_estimates.rs  entries.rs  services.rs  vehicle_set.rs
web/: index.html  style.css
web/main/: 404.html  index.html  l10n.js  robots.txt  sitemap.xml  style.css
web/nightly/: index.html
(+10 files in other folders)
