[workspace]
members = ["crates/*"]
exclude = ["crates/epaint_default_fonts"]
default-members = ["crates/paiagram-app"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
authors = ["Jeremy Gao <wensimehrp@gmail.com>"]
description = "Web/desktop timetabling application"
documentation = "https://paiagram.com/docs"
readme = "README.md"
repository = "https://github.com/wensimehrp/paiagram"
homepage = "https://paiagram.com"
keywords = ["timetabling", "scheduler", "web", "diagram"]
categories = ["visualization"]

[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "multi_threaded",
    "bevy_state",
    "std",
    "bevy_log",
    "bevy_color",
    "bevy_scene",
    "serialize",
    "reflect_auto_register",
    "http",
] }
bytemuck = { version = "1.23.2", features = ["extern_crate_alloc"] }
chrono = "0.4.44"
clap = { version = "4.5.51", features = ["derive"] }
egui = { version = "0.34.1", default-features = false, features = [
    "rayon",
    "persistence",
    "serde",
] }
eframe = { version = "0.34.1", default-features = false, features = [
    "accesskit",
    "wgpu",
    "persistence",
    "wayland",
    "web_screen_reader",
] }
egui-i18n = { version = "0.1.2", features = ["fluent"] }
either = "1.15.0"
ib-matcher = { version = "0.4.3", features = ["pinyin", "romaji"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
itertools = "0.14.0"
js-sys = "0.3"
lz4_flex = "0.12.0"
num-format = "0.4.4"
petgraph = { version = "0.8.3", features = ["serde-1", "rayon"] }
rayon = "1.11.0"
rfd = "0.17.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = { version = "1.15.1", features = ["serde"] }
urlencoding = "2.1.3"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
eros = "0.5.0"
vec1 = "1.12.1"
itoa = "1.0.18"

[patch.crates-io]
epaint_default_fonts = { path = "crates/epaint_default_fonts" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 2

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
opt-level = 2
lto = "fat"
panic = "abort"
strip = true

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
