[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["crates/epaint_default_fonts"]
default-members = ["crates/paiagram-ui"]

[workspace.package]
version = "0.1.3"
authors = ["Jeremy Gao <wensimehrp@gmail.com>"]
edition = "2024"
description = "Web/desktop timetabling application"
documentation = "https://paiagram.com/docs"
readme = "README.md"
homepage = "https://paiagram.com"
repository = "https://github.com/wensimehrp/paiagram"
license = "MPL-2.0"
keywords = ["diagram", "scheduler", "timetabling", "web"]
categories = ["visualization"]

[workspace.dependencies]
# ECS and states
bevy = {
  version = "0.18.0",
  default-features = false,
  features = [
    "bevy_color",
    "bevy_log",
    "bevy_scene",  # TO BE REMOVED
    "multi_threaded",
    "reflect_auto_register",  # TO BE REMOVED
    "serialize",  # TO BE REMOVED
    "std",
  ]
}
# WGSL data communication
bytemuck = { version = "1.23.2", features = ["extern_crate_alloc"] }
chrono = "0.4.44"
# CLI
clap = { version = "4.5.51", features = ["derive"] }
# Interesting string
ecow = { version = "0.3.0", features = ["serde"] }
# egui stuff
eframe = {
  version = "0.34.3",
  default-features = false,
  features = [
    "accesskit",
    "persistence",
    "wayland",
    "web_screen_reader",
    "wgpu",
  ]
}
egui = {
  version = "0.34.3",
  default-features = false,
  features = [
    "persistence",
    "rayon",
    "serde",
  ]
}
# Internationalization
egui-i18n = { version = "0.2.0", features = ["fluent"] }
either = "1.15.0"
eros = "0.5.0"
gloo-worker = "0.6.0"
ib-matcher = { version = "0.4.3", features = ["pinyin", "romaji"] }
itertools = "0.14.0"
itoa = "1.0.18"
js-sys = "0.3"
lz4_flex = "0.12.0"
num-format = "0.4.4"
petgraph = { version = "0.8.3", features = ["rayon", "serde-1"] }
rfd = "0.17.2"
rhai = "1.25.1"
ron = "0.12.0"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
slotmap = { version = "1.1.1", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["serde"] }
smol = "2.0.2"
urlencoding = "2.1.3"
vec1 = "1.12.1"
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4"

[patch.crates-io]
epaint_default_fonts = { path = "crates/epaint_default_fonts" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 2

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 2
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
