[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["crates/epaint_default_fonts"]
default-members = ["crates/paiagram"]

[workspace.package]
version = "0.1.3"
edition = "2024"
description = "Web/desktop timetabling application"
documentation = "https://paiagram.com/docs"
readme = "README.md"
homepage = "https://paiagram.com"
repository = "https://github.com/wensimehrp/paiagram"
license = "MPL-2.0"
keywords = ["diagram", "scheduler", "timetabling", "web"]
categories = ["visualization"]

[workspace.dependencies]
# WGSL data communication
bytemuck = { version = "1.23.2", features = ["extern_crate_alloc"] }
chrono = "0.4.44"
# CLI
clap = { version = "4.5.51", features = ["derive"] }
# Interesting string
ecow = { version = "0.3.0", features = ["serde"] }
# egui stuff
eframe = {
  version = "0.34.3",
  default-features = false,
  features = [
    "accesskit",
    "persistence",
    "wayland",
    "web_screen_reader",
    "wgpu",
  ]
}
egui = {
  version = "0.34.3",
  default-features = false,
  features = [
    "persistence",
    "rayon",
    "serde",
  ]
}
# Internationalization
egui-i18n = { version = "0.2.0", features = ["fluent"] }
either = "1.15.0"
eros = "0.5.0"
git-version = "0.3.9"
gloo-worker = "0.6.0"
ib-matcher = { version = "0.4.3", features = ["pinyin", "romaji"] }
itertools = "0.14.0"
itoa = "1.0.18"
jiff = "0.2.29"
js-sys = "0.3"
lz4_flex = "0.12.0"
num-format = "0.4.4"
petgraph = { version = "0.8.3", features = ["rayon", "serde-1"] }
rfd = "0.17.2"
rhai = "1.25.1"
ron = "0.12.0"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
slotmap = { version = "1.1.1", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["serde"] }
urlencoding = "2.1.3"
vec1 = "1.12.1"
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"
futures-lite = "2.6.1"
async-executor = "1.14.0"
log = "0.4.33"

[patch.crates-io]
epaint_default_fonts = { path = "crates/epaint_default_fonts" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 2

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 2
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
