[package]
name = "paiagram"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
paiagram-core = { path = "../paiagram-core" }
bevy = { version = "0.18.0", default-features = false, features = [
    "multi_threaded",
    "bevy_state",
    "std",
    "bevy_log",
    "bevy_color",
    "bevy_scene",
    "serialize",
    "reflect_auto_register",
    "http",
] }
clap = { version = "4.5.51", features = ["derive"] }
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",
    "wgpu",
    "persistence",
    "wayland",
    "web_screen_reader",
] }
egui = { version = "0.33.3", default-features = false, features = [
    "rayon",
    "persistence",
    "serde",
] }
urlencoding = "2.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
