[package]
name = "paiagram-app"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paiagram-core = { path = "../paiagram-core" }
paiagram-ui = { path = "../paiagram-ui" }
paiagram-rw = { path = "../paiagram-rw" }
bevy = { version = "0.18.0", default-features = false, features = [
    "multi_threaded",
    "bevy_state",
    "std",
    "bevy_log",
    "bevy_color",
    "bevy_scene",
    "serialize",
    "reflect_auto_register",
    "http",
] }
clap = { version = "4.5.51", features = ["derive"] }
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",
    "wgpu",
    "persistence",
    "wayland",
    "web_screen_reader",
] }
egui = { version = "0.33.3", default-features = false, features = [
    "rayon",
    "persistence",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_html_form = "0.4.0"
# Remember to update this when the nix dependency updates
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
