[package]
name = "paiagram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paiagram-core = { path = "../paiagram-core" }
paiagram-ui = { path = "../paiagram-ui" }
paiagram-rw = { path = "../paiagram-rw" }
bevy.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_html_form = "0.4.0"
# Remember to update this when the nix dependency updates
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
