[package]
name = "paiagram-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy.workspace = true
derive_more = { version = "2.1.0", features = ["full"] }
ecow.workspace = true
egui.workspace = true
egui-i18n.workspace = true
ehttp = { version = "0.6.0", features = ["json", "native-async"] }
either.workspace = true
encoding_rs = "0.8.35"
eros.workspace = true
# slotmap.workspace = true
fastrand = "2.4.1"
gtfs-structures = { version = "0.46.1", default-features = false }
itertools.workspace = true
moonshine-core = "0.5.1"
nohash-hasher = "0.2.0"
paiagram-oudia = {
  git = "https://github.com/wensimehrp/paiagram-oudia",
  branch = "main"
}
paiagram-rw = { path = "../paiagram-rw" }
paste = "1.0.15"
petgraph.workspace = true
rhai.workspace = true
rstar = "0.12.2"
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
smol.workspace = true
strsim = "0.11.1"
urlencoding.workspace = true
uuid = "1.23.3"
visgraph = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2.4.1", features = ["js"] }
gloo-worker.workspace = true
