[package]
name = "paiagram-oudia"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
anyhow = "1.0.101"
derive_more = { version = "2.1.1", features = ["full"] }
either = "1.15.0"
encoding_rs = "0.8.35"
from-pest = "0.3.4"
pest = "2.8.6"
pest_consume = "1.1.3"
pest_derive = "2.8.6"
smallvec = "1.15.1"
thiserror = "2.0.18"
