[package]
name = "paiagram-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
krilla = "0.6.0"
