[package]
name = "paiagram-raptor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paiagram-core = { path = "../paiagram-core" }
raptor = "0.2.0"
bevy.workspace = true

[lib]
test = false
doctest = false
