[package]
name = "paiagram-raptor"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy.workspace = true
paiagram-core = { path = "../paiagram-core" }
raptor = "0.2.0"
