[package]
name = "paiagram-rw"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "multi_threaded",
    "bevy_state",
    "std",
    "bevy_log",
    "bevy_color",
    "bevy_scene",
    "serialize",
    "reflect_auto_register",
] }
serde = "1.0.228"
rfd = "0.17.2"
lz4_flex = "0.12.0"
ron = "0.12.0"
cbor4ii = { version = "1.2.2", features = ["serde", "serde1"] }
num-format = "0.4.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
