[package]
name = "paiagram-rw"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy.workspace = true
cbor4ii = { version = "1.2.2", features = ["serde", "serde1", "use_std"] }
lz4_flex.workspace = true
num-format.workspace = true
rfd.workspace = true
ron.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
