[package]
name = "paiagram-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
paiagram-core = { path = "../paiagram-core" }
paiagram-raptor = { path = "../paiagram-raptor" }
paiagram-rw = { path = "../paiagram-rw" }
egui_tiles = "0.15.0"
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
egui.workspace = true
eframe.workspace = true
# TODO: investigate why 0.2.0 causes a bug
egui-i18n.workspace = true
egui_table = "0.8.0"
# bevy-inspector-egui = { version = "0.36.0", default-features = false }
urlencoding.workspace = true
rfd.workspace = true
instant.workspace = true
either.workspace = true
rayon.workspace = true
bytemuck.workspace = true
walkers = { version = "0.53.0", features = ["mvt"] }
ib-matcher.workspace = true
chrono.workspace = true
vec1.workspace = true
itertools.workspace = true
smallvec.workspace = true
eros.workspace = true
itoa.workspace = true
egui_commonmark = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
